# fds

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.circleci/: config.yml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: license-checker.yml  python-package.yml  python-publish.yml  release-drafter.yml  test.yml
ci/: package-py.sh  push_built_image.sh
fds/: cli.py  logger.py  run.py  utils.py
fds/domain/: commands.py  constants.py
fds/services/: base_service.py  dvc_service.py  fds_service.py  git_service.py  pretty_print.py  types.py
ff/: cli.py  logger.py  run.py  utils.py
ff/services/: base_service.py  dvc_service.py  ff_service.py  git_service.py  pretty_print.py
tests/: test_cli.py  test_fds.py  test_utils.py
tests/it/: helpers.py  test_dvc.py  test_fds.py  test_git.py  test_run.py
